--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,6 +1,5 @@
 .navbar {
-    background-color: #fff;
-    border-bottom: 1px solid #ddd;
+    background-color: #00796B;
     padding: 0 20px;
     height: 60px;
     display: flex;
@@ -10,3 +9,50 @@
     top: 0;
     z-index: 100;
 }
+
+.navbar-logo {
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+    background-color: #fafafa;
+    display: flex;
+    align-items: center;
+}
+.navbar-logo img {
+    height: 26px;
+}
+
+.navbar-row {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.navbar-row:nth-child(2) {
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.navbar-items ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0 20px;
+    gap: 15px;
+}
+
+.navbar-items ul li {
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
+    color: #fafafa;
+    cursor: pointer;
+    padding: 5px 0;
+    border-bottom: 1px solid transparent;
+    transition: border-bottom 0.3s ease-out, color 0.3s ease-out;
+}
+
+.navbar-items ul li:hover {
+    border-bottom: 1px solid #FF6F61;
+    color: #FF6F61;
+}
+
+
+
