added searchbar and addbutton components to the search and icons for notification box, settings, and user management.

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -54,5 +54,15 @@
     color: #FF6F61;
 }
 
+.icon {
+    width: 20px;
+    height: 20px;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar > :nth-child(2) {
+    gap: 25px;
+}
 
 
