--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -9,7 +9,6 @@
     position: fixed;
     top: 0;
     z-index: 100;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
 }
 
 .navbar-logo {
@@ -77,5 +76,39 @@
     border: 2px solid #FF6F61;
 }
 
+.submenu {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    right: 0px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+    padding: 10px 20px;
+    border-top: 2px solid #FF5733;
+    background-color: #fafafa;
+}
 
+.submenu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.submenu ul li {
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
+    color: #00796B;
+    cursor: pointer;
+    padding: 5px 0;
+    border-bottom: 1px solid transparent;
+    transition: border-bottom 0.3s ease-out, color 0.3s ease-out;
+}
+
+.submenu ul li:hover {
+    border-bottom: 1px solid #FF6F61;
+    color: #FF6F61;
+}
 
