wrapped the Outlet on the MainLayout component with main-layout-container style to make the navbar always appear on top even if the screen height gets smaller, this will also make the content of the Outlet be scrollable.

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,9 @@
     font-weight: bold;
 }
 
-.main-layout {
-    background-color: #fafafa;
+
+.main-layout-container {
     min-height: 100vh;
+    background-color: #fafafa;
+    padding: 70px;
 }
