--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 
 
 .main-layout-container {
-    min-height: 100vh;
-    background-color: #fafafa;
-    padding: 70px;
+    display: flex;
+    flex-direction: column;
+    padding: 80px 50px 30px 50px;
 }
