--- a/src/pages/agent_dashboard/AgentDashboard.module.css
+++ b/src/pages/agent_dashboard/AgentDashboard.module.css
@@ -3,6 +3,86 @@
     flex-direction: column;
     gap: 5px;
     padding: 1rem;
-    max-height: calc(100vh - 200px);
+    max-height: calc(100vh - 180px);
     overflow-y: auto;
+}
+
+.header-row:nth-child(1) {
+    justify-content: flex-start;
+    padding: 0;
+}
+
+.header-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2px 1rem;
+}
+
+.ticket-count {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 0 1rem 0 0;
+}
+
+.sml-action-btn {
+    border: 1px solid #878787;
+    padding: 2px 5px;
+    border-radius: 5px;
+    background-color: #f4f4f4;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.sml-action-btn:hover {
+    background-color: #ebebeb;
+}
+
+.ticket-filter-label {
+    font-size: 18px;
+    font-weight: 600;
+    padding: 0 1rem;
+}
+
+.icon {
+    width: 15px;
+    height: 15px;
+    fill: #757575;
+    cursor: pointer;
+}
+
+.icon-container {
+    position: relative;
+}
+
+.icon-container .dropdown-menu {
+    position: absolute;
+    top: 25px;
+    right: 0;
+    width: 200px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+}
+
+.icon-container .dropdown-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    color: #333;
+}
+
+.icon-container .dropdown-menu ul li {
+    padding: 5px 10px;
+    cursor: pointer;
+    white-space: nowrap;
+}
+
+.icon-container .dropdown-menu ul li:hover {
+    color: #fff;
+    background-color: #333;
 }
