--- a/src/pages/ticket_details/TicketDetails.module.css
+++ b/src/pages/ticket_details/TicketDetails.module.css
@@ -28,7 +28,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: calc(100vh - 200px);
+    height: calc(100vh - 210px);
     overflow-y: auto;
 }
 
@@ -116,6 +116,6 @@
     display: flex;
     width: 100%;
     justify-content: flex-end;
-    padding: 10px;
+    padding: 10px 50px;
 }
 
