--- a/src/pages/ticket_details/TicketDetails.module.css
+++ b/src/pages/ticket_details/TicketDetails.module.css
@@ -28,7 +28,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: calc(100vh - 210px);
+    height: calc(100vh - 280px);
+    min-height: 400px;
     overflow-y: auto;
 }
 
@@ -36,7 +37,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 10px;
+    padding: 5px;
     height: 100%;
 }
 
@@ -117,5 +118,7 @@
     width: 100%;
     justify-content: flex-end;
     padding: 10px 50px;
+    margin-top: 5px;
+    border-top: 1px solid black;
 }
 
