--- a/src/pages/create_ticket/CreateTicket.module.css
+++ b/src/pages/create_ticket/CreateTicket.module.css
@@ -6,7 +6,7 @@
 }
 
 .ticket-form {
-    width: 55%;
+    width: 85%;
     padding: 25px;
     border-radius: 5px;
     background-color: #ffffff;
@@ -40,14 +40,6 @@ label.required {
     color: #FF5733;
 }
 
-input,
-textarea,
-button,
-select {
-    width: 100%;
-    padding: 8px;
-    box-sizing: border-box;
-}
 
 select {
     width: 100%;
@@ -81,13 +73,16 @@ button {
     background-color: #00796B;
     color: #fff;
     cursor: pointer;
+    padding: 10px;
+    width: 120px;
 }
 
 .cancel-button {
     background-color: #fff;
     color: #FF5733;
     cursor: pointer;
-    padding: 8px;
+    padding: 10px;
+    width: 120px;
     box-sizing: border-box;
     border: 1px solid #FF5733;
     border-radius: 5px;
@@ -95,4 +90,22 @@ button {
 
 .cancel-button:hover {
     background-color: #f8f8f8;
+}
+
+.button-container {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 7%;
+}
+
+button,
+.cancel-button {
+    padding: 10px;
+    margin-left: 8px;
+}
+
+.horizontal-line {
+    border: 1px solid darkgrey;
+    margin: 15px 125px;
+
 }
