--- a/src/pages/loginpage/LoginPage.module.css
+++ b/src/pages/loginpage/LoginPage.module.css
@@ -79,6 +79,13 @@
 
 }
 
+.error-message {
+    color: #ee7d3f;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 5px 0;
+}
+
 @keyframes spin {
     0% {
         transform: rotate(0deg);
