--- a/src/components/TicketConversationBlock.module.css
+++ b/src/components/TicketConversationBlock.module.css
@@ -35,3 +35,9 @@
     font-size: 1rem;
     line-height: 1.4rem;
 }
+
+.conversation-block .conversation-block-row button {
+    padding: 2px;
+    box-shadow: 0 0 0 0;
+    border: none;
+}
