--- a/src/components/TicketBlock.module.css
+++ b/src/components/TicketBlock.module.css
@@ -15,6 +15,7 @@ p {
     padding: 15px 75px 15px 20px;
     cursor: pointer;
     transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    z-index: 10;
 }
 
 .ticket-block:hover {
@@ -94,6 +95,7 @@ p {
     position: relative;
     display: flex;
     flex-direction: column;
+    z-index: 1;
 }
 
 .dropdown-menu {
