--- a/src/pages/ticket_details/TicketDetails.module.css
+++ b/src/pages/ticket_details/TicketDetails.module.css
@@ -2,10 +2,9 @@
     display: flex;
     height: 100%;
     width: 100%;
-    border: 1px solid black;
     border-radius: 5px;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
     background-color: #fafafa;
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .left-container {
@@ -15,12 +14,12 @@
     height: calc(100vh - 120px);
     width: 300px;
     overflow-y: auto;
+    background-color: #fff;
 }
 
 .right-container {
     display: flex;
     flex-direction: column;
-    border-left: 1px solid black;
     height: 100%;
     width: 100%;
 }
@@ -48,6 +47,8 @@
 
 .ticket-title {
     padding: 10px 50px;
+    background-color: #f1efef;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .ticket-header {
@@ -69,7 +70,7 @@
 }
 
 .ticket-header-break-line {
-    border-top: 1px solid black;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
     padding-bottom: 15px;
 }
 
@@ -107,17 +108,37 @@
 }
 
 .ticket-number-bubble {
-    border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    padding: 2px 5px;
+    padding: 1px 5px;
+    font-weight: 600;
+    font-size: 0.9rem;
 }
 
 .ticket-container-footer {
     display: flex;
     width: 100%;
+    height: auto;
     justify-content: flex-end;
-    padding: 10px 50px;
-    margin-top: 5px;
-    border-top: 1px solid black;
+    align-items: center;
+    padding: 15px 50px;
+    margin-top: 10px;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+.ticket-container-footer button {
+    padding: 5px 10px;
+    box-shadow: 0 0 0 0;
+    font-weight: 500;
+}
+
+.ticket-contact-user {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.ticket-title .ticket-details-row button {
+    padding: 5px 10px;
+    box-shadow: 0 0 0 0;
+    font-weight: 500;
+}
