--- a/src/components/TicketConversationBlock.module.css
+++ b/src/components/TicketConversationBlock.module.css
@@ -3,9 +3,8 @@
     flex-direction: column;
     padding: 20px 50px;
     height: 100%;
-    border: 1px solid grey;
+    border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
 }
 
 .conversation-block-row {
