--- a/src/components/CommentPublisher.module.css
+++ b/src/components/CommentPublisher.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
-    border: 1px solid #5d5d5d;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 5px;
 }
 
@@ -18,7 +18,6 @@
     padding: 5px;
 }
 
-
 .button-container {
     display: flex;
     justify-content: flex-end;
@@ -28,4 +27,8 @@
 .button-container button {
     width: auto;
     min-width: 100px;
+    font-weight: 400;
+    font-size: 0.9rem;
+    padding: 5px 10px;
+    box-shadow: 0 0 0 0;
 }
