--- a/src/components/TicketConversationBlock.module.css
+++ b/src/components/TicketConversationBlock.module.css
@@ -40,3 +40,38 @@
     box-shadow: 0 0 0 0;
     border: none;
 }
+
+.button-container {
+    position: relative;
+}
+
+.dot-menu {
+    position: absolute;
+    top: 25px;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    padding: 0.5rem;
+    z-index: 1;
+    cursor: pointer;
+}
+
+.dot-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.dot-menu ul li {
+    padding: 0.5rem;
+    font-size: 0.9rem;
+    color: grey;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.dot-menu ul li:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
