--- a/src/components/TicketConversationBlock.module.css
+++ b/src/components/TicketConversationBlock.module.css
@@ -10,8 +10,9 @@
 .conversation-block-row {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    width: 100%;
     padding-bottom: 10px;
 }
 
