--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -71,6 +71,15 @@
     border-radius: 5px;
     transition: border 0.3s ease-out;
 }
+.user-icon{
+    height: 50px;
+    width: 50px;
+    border: 2px solid transparent;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: border 0.3s ease-out;
+}
 
 .icon:hover {
     border: 2px solid #FF6F61;
