--- a/src/pages/loginpage/LoginPage.module.css
+++ b/src/pages/loginpage/LoginPage.module.css
@@ -1,5 +1,5 @@
 .login-container {
-    background-color: #00796B;
+    background-color: #c0c0c0;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
