--- a/src/pages/user_welcome_page/UserWelcomePage.module.css
+++ b/src/pages/user_welcome_page/UserWelcomePage.module.css
@@ -56,3 +56,11 @@
     flex: 2;
     background-color: black;
 }
+
+.chat {
+    padding: 25px;
+    position: absolute;
+    right:0;
+    bottom: 0;
+    z-index: 999;
+}
