--- a/src/components/ChatBot.module.css
+++ b/src/components/ChatBot.module.css
@@ -1,4 +1,5 @@
 .chat-bubble {
+    position: relative;
     background-color: #00796B;
     border-radius: 50%;
     width: 60px;
@@ -8,4 +9,47 @@
     justify-content: center;
     align-items: center;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.chat-bubble:hover {
+    background-color: #00695C;
+}
+
+.chat-bot-ctr {
+    position: absolute;
+    bottom: 80px;
+    right: 90px;
+    width: 320px;
+    height: 400px;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+    background-color: #fafafa;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.chat-bot-header {
+    border-radius: 5px 5px 0 0;
+    display: flex;
+    justify-content: space-between;
+    background-color: #00796B;
+    padding: 5px 10px;
+}
+
+.chat-bot-header p {
+    color: #fff;
+    font-size: 1rem;
+}
+
+.chat-body {
+    flex-grow: 1;
+    overflow-y: auto;
+}
+
+.chat-footer {
+    background-color: #fafafa;
+    padding: 5px 10px;
 }
