--- a/src/components/ChatBot.module.css
+++ b/src/components/ChatBot.module.css
@@ -49,6 +49,7 @@
     display: flex;
     flex-direction: column;
     padding: 5px 10px;
+    gap: 8px;
     overflow-y: auto;
 }
 
@@ -73,8 +74,41 @@
     color: #fff;
     width: auto;
     border-radius: 5px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.chat-footer button:hover {
+    background-color: #005a4f;
+
 }
 
 .horizontal-line {
     color: rgba(0, 0, 0, 0.2);
+}
+
+.chat-message {
+    padding: 5px;
+    border-radius: 5px;
+    background-color: #D0D9E3;
+    color: #333;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.chat-bot-ctr-ops {
+    display: flex;
+    gap: 10px;
+}
+
+.chat-bot-ctr-ops button {
+    border: none;
+    padding: 5px 10px;
+    background-color: #00695C;
+    color: #fff;
+    width: auto;
+    border-radius: 5px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.chat-bot-ctr-ops button:hover {
+    background-color: #005a4f;
 }
