--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -187,3 +187,73 @@
 .status-label span {
     border-bottom: 2px solid #757575;
 }
+
+.department-overflow {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    min-height: 100vh;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+
+.department-container {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+}
+
+.department-container-row {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.department-container-row p {
+    font-size: 1rem;
+    color: #757575;
+}
+
+.department-container-row .close {
+    cursor: pointer;
+    font-weight: 600;
+    color: #757575;
+    transition: color 0.3s ease-out;
+}
+
+.department-container-row .close:hover {
+    color: #FF6F61;
+}
+
+.department-container-row-group {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 25px 50px;
+    justify-content: center;
+    align-content: center;
+}
+
+.department-container-row-group input {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #757575;
+}
+
+.department-container-row-group button {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #757575;
+    background-color: #00796B;
+    color: white;
+    cursor: pointer;
+    width: 100%;
+}
