--- a/src/components/UserBlock.module.css
+++ b/src/components/UserBlock.module.css
@@ -11,6 +11,13 @@
     transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
+.profile-pic {
+    width: 50px; /* Adjust the size as needed */
+    height: 50px; /* Adjust the size as needed */
+    border-radius: 50%;
+    margin-right: 10px; /* Add spacing between the picture and text */
+}
+
 .user-block:hover {
     background-color: #ececec;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
