--- a/src/pages/user_welcome_page/UserWelcomePage.module.css
+++ b/src/pages/user_welcome_page/UserWelcomePage.module.css
@@ -2,11 +2,34 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    min-height: calc(100vh - 125px);
+    padding-top: 180px;
+    padding-left: 150px;
+    padding-right: 150px;
 }
 
+.col-ch {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+    padding: 50px;
+}
+.col-ch button {
+    width: 250px;
+}
+.col-ch p {
+    font-size: 1.2rem;
+    text-align: left;
+}
 .row {
     display: flex;
-    align-content: center;
+    align-items: center;
+}
+
+.row:nth-child(2) {
+    justify-content: space-around;
+    gap: 50px;
 }
 
 .row:first-child {
@@ -52,10 +75,6 @@
     font-size: 1rem;
     color: #fff;
 }
-.row:nth-child(2) {
-    flex: 2;
-    background-color: black;
-}
 
 .chat {
     padding: 25px;
@@ -63,4 +82,8 @@
     right:0;
     bottom: 0;
     z-index: 999;
+}
+.agent-ctr img {
+    height: 350px;
+    border-radius: 50%;
 }
