--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -8,7 +8,7 @@
     cursor: pointer;
     background-color: #00796B;
     color: #fff;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.4);
+    /*box-shadow: 0 5px 10px rgba(0,0,0,0.4);*/
     font-family: 'Roboto', sans-serif;
     transition: background-color 0.3s ease-in-out;
 }
@@ -77,7 +77,7 @@
     cursor: pointer;
     background-color: transparent;
     color: #4CAF50;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.4);
+    /*box-shadow: 0 5px 10px rgba(0,0,0,0.4);*/
     font-family: 'Roboto', sans-serif;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
@@ -127,7 +127,7 @@
     cursor: pointer;
     background-color: #4CAF50;
     color: #fff;
-    box-shadow: 0 5px 10px rgba(0,0,0,0.4);
+    /*box-shadow: 0 5px 10px rgba(0,0,0,0.4);*/
     font-family: 'Roboto', sans-serif;
     transition: background-color 0.3s ease-in-out;
 }
@@ -142,4 +142,27 @@
 
 .small-button {
     width: 100px;
+}
+
+.blue-button {
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px;
+    width: 100%;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: #0d93e7;
+    color: #fff;
+    /*box-shadow: 0 5px 10px rgba(0,0,0,0.4);*/
+    font-family: 'Roboto', sans-serif;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.blue-button:hover {
+    background-color: #0d7dc4;
+}
+
+.blue-button:active {
+    background-color: #0d7dc4;
 }
