--- a/src/components/Input.module.css
+++ b/src/components/Input.module.css
@@ -6,6 +6,6 @@
     font-size: 16px;
     font-weight: bold;
     color: rgba(51,51,51,.6);
-    box-shadow: 0 5px 10px rgba(0,0,0,0.4);
+    /*box-shadow: 0 5px 10px rgba(0,0,0,0.4);*/
     background-color: #eaeaea;
 }
