--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #00796B;
+    background-color: #2e7da9;
     padding: 0 20px;
     height: 60px;
     width: 100%;
