--- a/src/components/SearchBar.module.css
+++ b/src/components/SearchBar.module.css
@@ -8,7 +8,7 @@
     padding: 10px 40px 10px 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)
+    /*box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2)*/
 }
 
 .search-bar img {
