--- a/src/pages/ticket_details/TicketDetails.module.css
+++ b/src/pages/ticket_details/TicketDetails.module.css
@@ -47,7 +47,9 @@
 }
 
 .ticket-title {
-    padding: 10px 50px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 25px 10px 50px;
     background-color: #f1efef;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
@@ -96,6 +98,11 @@
     justify-content: space-between;
 }
 
+.tkt-num-row {
+    display: flex;
+    flex: 1;
+}
+
 .ticket-details-row > div:nth-child(2) {
     display: flex;
     gap: 10px;
@@ -120,7 +127,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 8px 50px;
+    padding: 8px 25px;
     margin-top: 10px;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
@@ -133,13 +140,17 @@
 
 .ticket-container-footer-open p {
     white-space: nowrap;
-    color: #ea5133;
-    font-size: 1rem;
-    font-weight: 600;
+    color: #ffff;
+    /*convert background-color to rgba*/
+
+    background-color: rgba(196, 65, 38, 0.8);
+    padding: 5px 10px;
+    font-size: 14px;
+    font-weight: 400;
 }
 
 .ticket-container-footer button {
-    padding: 10px 15px;
+    padding: 5px 10px;
     box-shadow: 0 0 0 0;
     font-weight: 400;
     font-size: 0.9rem;
