added text above the loading icon to advise the user that tickets are loading, changed the UI for the ticket form for responsiveness and visual improvement, modified the user welcome page for visual improvement.

--- a/src/pages/agent_dashboard/AgentDashboard.module.css
+++ b/src/pages/agent_dashboard/AgentDashboard.module.css
@@ -118,6 +118,13 @@
 
 }
 
+.loader-txt {
+    font-size: 20px;
+    font-weight: 600;
+    padding: 10px 0;
+
+}
+
 .loader {
     border: 5px solid #f3f3f3; /* Light grey */
     border-top: 5px solid #3498db; /* Blue */
