--- a/src/pages/user_welcome_page/UserWelcomePage.module.css
+++ b/src/pages/user_welcome_page/UserWelcomePage.module.css
@@ -13,7 +13,6 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 1rem;
-    padding: 50px;
 }
 .col-ch button {
     width: 250px;
@@ -28,13 +27,15 @@
 }
 
 .row:nth-child(2) {
+    flex: 1;
     justify-content: space-around;
-    gap: 50px;
+    padding-top: 100px;
 }
 
 .row:first-child {
     background: url("../../assets/img/software_banner.png") no-repeat top center;
-    height: 250px;
+    background-color: #90bad0;
+    height: 350px;
     position: absolute;
     left: 0;
     top: 0;
@@ -67,12 +68,12 @@
 }
 
 .banner-ctr p:first-child {
-    font-size: 2.5rem;
+    font-size: 3rem;
     color: #fff;
 }
 
 .banner-ctr p:nth-child(2) {
-    font-size: 1rem;
+    font-size: 1.1rem;
     color: #fff;
 }
 
@@ -84,6 +85,5 @@
     z-index: 999;
 }
 .agent-ctr img {
-    height: 350px;
-    border-radius: 50%;
+    height: 400px;
 }
