--- a/src/components/UserBlock.module.css
+++ b/src/components/UserBlock.module.css
@@ -2,11 +2,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-radius: 5px;
+    min-width: calc(50% - 1rem);
+    border: 1px solid #ececec;
     background-color: #fff;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
     padding: 15px;
-    margin-bottom: 15px;
     cursor: pointer;
     transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
@@ -18,10 +17,9 @@
     margin-right: 10px; /* Add spacing between the picture and text */
 }
 
-.user-block:hover {
-    background-color: #ececec;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
-}
+/*.user-block:hover {*/
+/*    background-color: #ececec;*/
+/*}*/
 
 .circular-image {
     width: 50px;
@@ -30,7 +28,9 @@
 }
 
 .user-info {
-    margin-left: 20px;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
 }
 
 .user-info p {
@@ -48,4 +48,21 @@
 .user-info p:not(:first-child) {
     font-size: 14px;
     color: #757575;
+}
+
+.col {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.col:nth-child(2) p:first-child {
+    font-size: 1rem;
+    color: #757575;
+}
+
+.col:nth-child(2) p:not(:first-child) {
+    font-size: .9rem;
+    font-weight: 500;
+    color: #333;
 }
