--- a/src/pages/create_account/CreateAccount.module.css
+++ b/src/pages/create_account/CreateAccount.module.css
@@ -32,39 +32,32 @@
     flex: 1;
 }
 
-label {
-    font-weight: bold;
-}
+/*label {*/
+/*    font-weight: bold;*/
+/*}*/
 
-label.required::after {
-    content: '*';
-    color: #FF5733;
-    margin-left: 4px;
+/*label.required::after {*/
+/*    content: '*';*/
+/*    color: #FF5733;*/
+/*    margin-left: 4px;*/
 
-}
+/*}*/
 
-label.required {
-    color: #FF5733;
-}
+/*label.required {*/
+/*    color: #FF5733;*/
+/*}*/
 
 
-select {
-    width: 100%;
-    padding: 8px;
-    box-sizing: border-box;
-}
+/*select {*/
+/*    width: 100%;*/
+/*    padding: 8px;*/
+/*    box-sizing: border-box;*/
+/*}*/
 
-input[type="file"] {
-    display: none;
-}
+/*input[type="file"] {*/
+/*    display: none;*/
+/*}*/
 
-button {
-    background-color: #00796B;
-    color: #fff;
-    cursor: pointer;
-    padding: 10px;
-    width: 120px;
-}
 
 .cancel-button {
     background-color: #fff;
@@ -95,5 +88,4 @@ button {
 .horizontal-line {
     border: 1px solid darkgrey;
     margin: 15px 125px;
-
 }
