improved the UI for the settings page, added a side menu to choose from different settings, added account and roles link to change specific settings for account and roles.

--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -117,11 +117,11 @@
 }
 
 .green-button {
-    border-radius: 5px;
-    padding: 10px 15px;
+    border-radius: 4px;
+    padding: 8px 10px;
     width: 100%;
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 1rem;
+    font-weight: 400;
     cursor: pointer;
     background-color: transparent;
     border: 2px solid #4CAF50;
