--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -18,7 +18,7 @@
     align-items: center;
 }
 .navbar-logo img {
-    height: 26px;
+    height: 28px;
 }
 
 .navbar-row {
@@ -60,15 +60,6 @@
 }
 
 .icon {
-    height: 42px;
-    width: 42px;
-    border: 2px solid transparent;
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: border 0.3s ease-out;
-}
-.user-icon{
     height: 50px;
     width: 50px;
     border: 2px solid transparent;
@@ -77,14 +68,23 @@
     border-radius: 5px;
     transition: border 0.3s ease-out;
 }
+/*.user-icon{*/
+/*    height: 50px;*/
+/*    width: 50px;*/
+/*    border: 2px solid transparent;*/
+/*    padding: 10px;*/
+/*    cursor: pointer;*/
+/*    border-radius: 5px;*/
+/*    transition: border 0.3s ease-out;*/
+/*}*/
 
-.icon:hover {
-    border: 2px solid #FF6F61;
-}
+/*.icon:hover {*/
+/*    border: 2px solid #FF6F61;*/
+/*}*/
 
-.user-icon-container {
-    position: relative;
-}
+/*.user-icon-container {*/
+/*    position: relative;*/
+/*}*/
 
 .submenu {
     display: flex;
