--- a/src/components/Input.module.css
+++ b/src/components/Input.module.css
@@ -1,11 +1,10 @@
 .default-input {
-    border: none;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     padding: 10px 15px;
     width: 100%;
-    font-size: 16px;
-    font-weight: bold;
-    color: rgba(51,51,51,.6);
+    font-size: 1rem;
+    color: rgba(38, 36, 36, 0.8);
+    font-weight: 600;
     /*box-shadow: 0 5px 10px rgba(0,0,0,0.4);*/
-    background-color: #eaeaea;
 }
