--- a/src/pages/settings/Settings.module.css
+++ b/src/pages/settings/Settings.module.css
@@ -1,6 +1,5 @@
 .settings-row {
     display: flex;
-
 }
 
 .side-menu {
@@ -10,57 +9,69 @@
     position: absolute;
     top: 0;
     left: 0;
-    padding: 70px 100px 0 40px;
+    padding: 60px 0 0 0;
     background-color: #1c2f38;
 }
 
 .side-menu p {
     color: #ffffff;
     font-size: 1rem;
+    font-weight: 300;
     cursor: pointer;
-    padding-top: 1.5rem;
+    padding: 10px 50px 10px 20px;
     border-bottom: 1px solid transparent;
-    transition: border-bottom 0.3s ease-in-out, color 0.3s ease-in-out;
+    transition: background-color 0.3s ease-in-out;
 }
 
 .side-menu p:hover {
-    color: #0d93e7;
-    border-bottom: 1px solid #0d93e7;
+    background-color: rgba(76, 175, 80, 0.4);
 }
 
 .side-menu p.active {
-    color: #4CAF50;
-    border-bottom: 1px solid #4CAF50;
+    background-color: #4CAF50;
+}
+
+.header-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-row button {
+    width: 150px;
 }
 
 .settings-content-ctr {
     display: flex;
     flex-direction: column;
-    padding-left: 190px;
+    padding-left: 175px;
     flex: 1;
 }
 
 .settings-container {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     padding-top: 1rem;
 }
 
 .settings-form {
-    padding: 25px 50px;
+    padding: 25px 200px 25px 75px;
     border-radius: 5px;
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+    overflow-y: auto;
+    max-height: calc(100vh - 180px);
 }
 
 .profile-pic-button {
-    border: 4px solid green;
+    /* border with rgba: #2e7da9*/
+    border: 2px solid rgba(46, 125, 169, 0.4);
+    border-radius: 50%;
     padding: 0;
-    background-color: transparent;
+    background-color: rgba(46, 125, 169, 0.2);
     cursor: pointer;
     width: 100px;  /* Adjust as needed to fit image */
     height: 100px; /* Adjust as needed to fit image */
@@ -78,18 +89,156 @@
     color: #333;
 }
 
+.row {
+    display: flex;
+    gap: 50px;
+}
+
+.row div {
+    flex: 1;
+}
+
 .col {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 4px;
 }
 
-.col label {
+.col label,
+.label-txt {
     font-size: 1rem;
-    font-weight: 500;
+    font-weight: 400;
     color: #757575;
 }
 
-.btn-row {
-    padding-top: 1rem;
+.roles-btn button {
+    width: auto;
+}
+
+/*
+    create role modal styling
+*/
+.modal-ctr {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.5);
+    min-height: 100vh;
+    padding: 50px 150px;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+
+.modal {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    padding: 25px 50px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
+    min-width: 500px;
+    overflow: auto;
+    max-height: calc(100vh - 100px);
+}
+
+.modal .row {
+    justify-content: space-between;
+    align-items: center;
+}
+
+.closing-x {
+    cursor: pointer;
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #ff0000;
+    transition: color 0.3s ease-out;
+}
+
+.closing-x:hover {
+    color: #ff6f61;
+}
+
+.closing-x:active {
+    color: #de482d;
+}
+
+.checkbox-group {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.checkbox-group div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 200px;
+}
+
+.checkbox-group div label {
+   white-space: nowrap;
+    padding-right: 10px;
+}
+
+.checkbox-group div input {
+    width: 15px;
+    height: 15px;
+}
+
+.dropdown-input {
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    padding: 10px 15px;
+    width: 100%;
+    font-size: 1rem;
+    color: rgba(51, 51, 51, 0.8);
+    font-weight: 600;
+}
+
+.dpt-ctr {
+    display: flex;
+    flex-direction: column;
+    max-height: 250px;
+    overflow-y: auto;
+}
+
+.dpt-sub-ctr {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    padding: 10px 15px;
+}
+
+.dpt-sub-ctr-checkbox {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 200px;
+}
+
+.dpt-sub-ctr-checkbox input {
+    width: 15px;
+    height: 15px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table th {
+    text-align: left;
+    padding: 10px 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+table td {
+    padding: 10px 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
